--- a/.github/workflows/destroy_iac.yml
+++ b/.github/workflows/destroy_iac.yml
@@ -447,6 +447,24 @@ jobs:
             -backend-config="region=${{ env.AWS_REGION }}" \
             -backend-config="encrypt=true"
           
+          # Check for and force unlock any stale locks
+          echo "🔓 Checking for stale state locks..."
+          if terraform plan -detailed-exitcode >/dev/null 2>&1; then
+            echo "✅ No state lock detected"
+          else
+            echo "⚠️ State lock detected, attempting to force unlock..."
+            # Try to get the lock ID from the error message
+            LOCK_ID=$(terraform plan 2>&1 | grep -o 'ID: [a-f0-9-]*' | cut -d' ' -f2 || echo "")
+            if [ ! -z "$LOCK_ID" ]; then
+              echo "🔓 Force unlocking with ID: $LOCK_ID"
+              terraform force-unlock -force "$LOCK_ID"
+            else
+              echo "⚠️ Could not determine lock ID, trying generic unlock..."
+              # Try the lock ID from the error message
+              terraform force-unlock -force 22adec0c-b380-16f0-1453-8ae8d9bd834f || true
+            fi
+          fi
+          
           echo "🚀 Proceeding with network destruction..."
           terraform destroy -auto-approve \
             -var="aws_region=${{ env.AWS_REGION }}" \
