--- a/.github/workflows/deploy_iac_codebase_aws.yml
+++ b/.github/workflows/deploy_iac_codebase_aws.yml
@@ -1,4 +1,4 @@
-name: "Deploy IaC and Codebase"
+name: "Deploy IaC and Codebase to AWS"
 
 on:
   # push:
@@ -38,7 +38,7 @@ jobs:
 
   deploy_infrastructure:
     needs: setup
-    uses: ./.github/workflows/deploy_iac.yml
+    uses: ./.github/workflows/deploy_iac_aws.yml
     with:
       environment: ${{ inputs.environment || 'staging' }}
     secrets: inherit
@@ -46,7 +46,7 @@ jobs:
   deploy_codebase:
     needs: deploy_infrastructure
     if: needs.deploy_infrastructure.outputs.cluster_status == '✅'
-    uses: ./.github/workflows/deploy_codebase.yml
+    uses: ./.github/workflows/deploy_codeto_aws.yml
     with:
       cluster_name: ${{ needs.deploy_infrastructure.outputs.cluster_name }}
       cluster_endpoint: ${{ needs.deploy_infrastructure.outputs.cluster_endpoint }}
