fixin a syntax error in the use of aws cli commands

--- a/.github/workflows/deploy_iac_aws.yml
+++ b/.github/workflows/deploy_iac_aws.yml
@@ -332,7 +332,7 @@ jobs:
 
           # Count NAT Gateways
           NAT_COUNT=$(aws ec2 describe-nat-gateways \
-            --filters "Name=vpc-id,Values=$VPC_ID" \
+            --filter "Name=vpc-id,Values=$VPC_ID" \
             --query "length(NatGateways)" \
             --output text)
 
