--- a/.github/workflows/deploy_codeto_aws.yml
+++ b/.github/workflows/deploy_codeto_aws.yml
@@ -124,8 +124,24 @@ jobs:
           echo "⏳ Waiting for deployment rollout..."
           if ! kubectl rollout status deployment/vanillatstodo --timeout=10m; then
             echo "❌ Deployment failed!"
+            echo ""
+            echo "🔍 Deployment Details:"
             kubectl describe deployment/vanillatstodo
-            kubectl logs -l app=vanillatstodo --tail=100
+            echo ""
+            echo "🔍 Pod Status:"
+            kubectl get pods -l app=vanillatstodo -o wide
+            echo ""
+            echo "🔍 Pod Events:"
+            kubectl describe pods -l app=vanillatstodo
+            echo ""
+            echo "🔍 Container Logs:"
+            kubectl logs -l app=vanillatstodo --tail=100 --all-containers=true
+            echo ""
+            echo "🔍 Node Resources:"
+            kubectl top nodes || echo "Metrics not available"
+            echo ""
+            echo "🔍 Cluster Events:"
+            kubectl get events --sort-by=.metadata.creationTimestamp --tail=20
             exit 1
           fi
 
